# ihm_krunk

./: CMakeLists.txt  README.md  install_script.sh  package.xml
launch/: start_ihm.launch
src/: IHM_test.py  Test.py  launch_IHM.py
src/Codes/Camera/: acquisition_camera.py  launch_camera.py  manual_rosbag_analysis.py
src/Codes/Lidar/: acquisition_lidar.py  convert_lidar_txt.py  launch_lidar.py
src/Codes/Light/: launch_light.py
src/acquisitions/acquisition_camera/: README
src/acquisitions/acquisition_globale/: README
src/acquisitions/acquisition_r2000/: README
