<?xml version="1.0"?>
<package format="2">
  <name>ihm_krunk</name>
  <version>0.0.0</version>
  <description>The ihm_krunk package</description>

  <!-- Maintainer information -->
  <maintainer email="oem@todo.todo">oem</maintainer>

  <!-- License information (replace TODO with your license) -->
  <license>TODO</license>

  <!-- Dependency information -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend> <!-- Added std_msgs as a build dependency -->
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Optional: URL information -->
  <!-- Uncomment and replace with your URL -->
  <!-- <url type="website">http://wiki.ros.org/ihm_krunk</url> -->

  <!-- Optional: Author information -->
  <!-- Uncomment and replace with your author information -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

